# sofomo_task

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
DbHandler/: DatabaseItem.cpp  DatabaseItem.hpp  DbHandler.cpp  DbHandler.hpp
Doc/: ClassDiagram.puml  basic_arch.drawio
IpStackWrapper/: CMakeLists.txt  CurlWrapper.hpp  CurlWrapperIf.hpp  IpStackWrapper.cpp  IpStackWrapper.hpp
Src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Src/DbHandler/: CMakeLists.txt
Src/IpStackWrapper/: CMakeLists.txt  CurlWrapper.cpp  CurlWrapper.hpp  IpStackWrapper.cpp  IpStackWrapper.hpp
Src/UrlHandler/: CMakeLists.txt  InputHelper.cpp
Tests/: CMakeLists.txt  DbHandlerTest.cpp  IpStackWrapperTest.cpp
Tests/mocks/: CMakeLists.txt  CurlMock.h  Sqlite3_stubs.hpp
UrlHandler/: InputHelper.cpp  InputHelper.hpp
sqlite-amalgamation-3470100/: CMakeLists.txt
